syntax = "proto3";
package lavanet.lava.servicer;

option go_package = "github.com/lavanet/lava/x/servicer/types";
import "servicer/block_num.proto"; 
import "gogoproto/gogo.proto";

message EarliestSessionStart {
  BlockNum block = 1 [(gogoproto.nullable) = false]; 
  
}
